文章分类功能：查询、删除

--- a/src/main/resources/static/manager/managerIndex.html
+++ b/src/main/resources/static/manager/managerIndex.html
@@ -14,19 +14,23 @@
 	<script type="text/javascript" src="../js/manager/managerIndex.js"></script>
 </head>
 <body>
-	<div class="container">
+	<div class="title">许你一城个人博客管理主页</div>
+	<div class="container clearfix">
 		<div class="row">
 			<div class="item">
-				<a href="list-news-notice.jsp">文章管理</a>
+				<a href="managerArticleCategory.html" target="_blank">分类管理</a>
 			</div>
 			<div class="item">
-				<a href="add-news-notice.jsp">评论管理</a>
+				<a href="list-news-notice.jsp" target="_blank">文章管理</a>
 			</div>
 			<div class="item">
-				<a href="HistoryAction_getHistoryList">用户管理</a>
+				<a href="add-news-notice.jsp" target="_blank">评论管理</a>
 			</div>
 			<div class="item">
-				<a href="MemberAction_getMemberList">xx</a>
+				<a href="HistoryAction_getHistoryList" target="_blank">用户管理</a>
+			</div>
+			<div class="item">
+				<a href="MemberAction_getMemberList" target="_blank">xx</a>
 			</div>
 			<div class="item exit">
 				<a href="MemberAction_getMemberList">退出登录</a>
